<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <!-- maybe it should me match_parent? -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/basicSettingsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/basic_aquarium_settings"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hardwareIdTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aquariumSettingsTextView"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:hint="@string/unique_hardware_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aquariumNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aquariumNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="',.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:maxLength="23"
            android:hint="@string/aquarium_name" />
    </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/newAquarium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
<!--
    <Button
        android:id="@+id/addAquariumButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="+"
        android:visibility="invisible"/>
-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/notifSettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/notifications"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/notifSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
</LinearLayout>

    <TextView
        android:id="@+id/tempSettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/temperature_settings"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tempUnitsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/units" />
    <Spinner
        android:id="@+id/tempUnitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"/>
</LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minTempTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/minTempEditText"
            android:hint="@string/minimum_temperature"
            android:maxLength="6"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxTempTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/maxTempEditText"
            android:hint="@string/max_temperature"
            android:inputType="numberDecimal"
            android:maxLength="6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/phSettingsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ph_settings"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minPhTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/minPhEditText"
            android:hint="@string/minimum_ph"
            android:inputType="numberDecimal"
            android:maxLength="4"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxPhTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/maxPhEditText"
            android:hint="@string/max_ph"
            android:inputType="numberDecimal"
            android:maxLength="4"/>
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/salinitySettingsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/salinity_settings_ppm"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minSalinityTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minSalinityEditText"
                android:hint="@string/minimum_salinity"
                android:inputType="numberDecimal"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/maxSalinityTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxSalinityEditText"
                android:hint="@string/maximum_salinity"
                android:inputType="numberDecimal"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/save_settings"
            android:visibility="invisible" />

        <Button
            android:id="@+id/deleteSettingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/delete_aquarium"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>
