<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Aquarium.AquariumsActivity">

    <ImageView
        android:id="@+id/aquariumsIcon"
        android:layout_width="126dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/fish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

  <!--  <TextView
        android:id="@+id/aquariumWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="Welcome to AquaFacts!"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aquariumsIcon" />-->


    <TextView
        android:id="@+id/aquariumPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/aquarium_prompt"
        app:layout_constraintBottom_toTopOf="@id/aquariumsScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aquariumsIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/randomViewLOL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/your_aquariums"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/aquariumPromptTextView" />

    <ScrollView
        android:id="@+id/aquariumsScrollView"
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toTopOf="@id/addAquariumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomViewLOL"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/aquariumsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="698dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/aquariumsScrollView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aquariumPromptTextView"/>
    </ScrollView>

    <Button
        android:id="@+id/addAquariumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/create_your_aquarium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addAquariumFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
         android:clickable="true"
         android:contentDescription="Add an aquarium"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.887"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />-->


</androidx.constraintlayout.widget.ConstraintLayout>